--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -22,7 +22,7 @@
     /* Light section - text color */
     --section-light-text-color: #3a4145;
     /* Light section - background color */
-    --section-light-bg-color: #f2efe8;
+    --section-light-bg-color: #141b27;
 
     /* Dark section - text color */
     --section-dark-text-color: var(--section-light-bg-color);
