--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -22,12 +22,12 @@
     /* Light section - text color */
     --section-light-text-color: #3a4145;
     /* Light section - background color */
-    --section-light-bg-color: #141b27;
+    --section-light-bg-color: #392e9d;
 
     /* Dark section - text color */
     --section-dark-text-color: var(--section-light-bg-color);
     /* Dark section - background color */
-    --section-dark-bg-color: #000135;
+    --section-dark-bg-color: #a461e2;
 
     /* Light&Dark section >quote. Supressive color, compared to 'Light section - text color'*/
     --section-uni-quote: grey;
