--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -1,9 +1,9 @@
 :root {
 
     /* === Cover / Landing area === */
-    --cover-text-color: #37501a;
+    --cover-text-color: #000000;
     /* Used for Landing screen menu buttons, but potentially usable for highlighting other things */
-    --highlight: #86c440;
+    --highlight: #ffffff;
     --highlight-contrast: var(--cover-text-color);
     /*iverse colors used for :hover */
     --highlight-inverse: var(--cover-text-color);
@@ -15,19 +15,19 @@
 
 
     /* === sticky top/left navigation menus === */
-    --sticky-menu-text-color: #9fd067;
+    --sticky-menu-text-color: #000000;
 
 
     /* === Alternating content (post) sections  === */
     /* Light section - text color */
-    --section-light-text-color: #3a4145;
+    --section-light-text-color: #000000;
     /* Light section - background color */
-    --section-light-bg-color: #392e9d;
+    --section-light-bg-color: #ffffff;
 
     /* Dark section - text color */
     --section-dark-text-color: var(--section-light-bg-color);
     /* Dark section - background color */
-    --section-dark-bg-color: #a461e2;
+    --section-dark-bg-color: #141b27;
 
     /* Light&Dark section >quote. Supressive color, compared to 'Light section - text color'*/
     --section-uni-quote: grey;
