--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -53,7 +53,7 @@ body {
     margin: 10px 0 10px 0;
     font-size: 5rem;
     letter-spacing: -1px;
-    text-shadow: var(--cover-title-text-shadow);
+    //text-shadow: var(--cover-title-text-shadow);
   }
 
   .blog-description {
@@ -63,7 +63,7 @@ body {
     font-weight: 400;
     font-family: "Roboto Slab", serif;
     letter-spacing: 0;
-    text-shadow: var(--cover-title-text-shadow);
+    //text-shadow: var(--cover-title-text-shadow);
   }
 
   // Landing screen menu
