--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -1,9 +1,9 @@
 :root {
 
     /* === Cover / Landing area === */
-    --cover-text-color: #000000;
+    --cover-text-color: #575e6a;
     /* Used for Landing screen menu buttons, but potentially usable for highlighting other things */
-    --highlight: #ffffff;
+    --highlight: #141b27;
     --highlight-contrast: var(--cover-text-color);
     /*iverse colors used for :hover */
     --highlight-inverse: var(--cover-text-color);
