--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,7 +2,7 @@
   <main class="content page-template 404" role="main">
     <article class="post page">
       <header class="post-header">
-        <a id="blog-logo" href="{{ "/" | relURL }}">
+        <a id="" href="{{ "/" | relURL }}">
           {{ .Site.Title }}
         </a>
       </header>
