--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -25,7 +25,7 @@
     --section-light-bg-color: #ffffff;
 
     /* Dark section - text color */
-    --section-dark-text-color: var(--section-light-bg-color);
+    --section-dark-text-color: #575e6a; /*var(--section-light-bg-color);*/
     /* Dark section - background color */
     --section-dark-bg-color: #141b27;
 
