--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -15,6 +15,7 @@ body {
 #site-head.withCenteredImage{
   /* can't be used together with video */
   background: var(--section-light-bg-color) no-repeat center center;
+  background-color: #141b27;
 }
 
 #site-head, #site-head.withCenteredImage {
