--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -1,7 +1,7 @@
 body {
   --color-text: var(--section-light-text-color);
   --color-background: var(--section-light-bg-color);
-  background-color: #141b27;
+  background-color: var(--section-light-bg-color);
 }
 /* ===== Cover =======*/
 
