--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -15,7 +15,7 @@
 
 
     /* === sticky top/left navigation menus === */
-    --sticky-menu-text-color: #575e6a;
+    --sticky-menu-text-color: #1796d1;
 
 
     /* === Alternating content (post) sections  === */
